# sd-proxy

./: Cargo.toml  Dockerfile  justfile
.github/workflows/: build.yml
etc/: sd-proxy@.container  sd-proxy@.socket
src/: addr.rs  main.rs
