[package]
name = "sd-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["env", "derive"] }
eyre = "0.6"
listenfd = "1"
ppp = "2.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal"] }
tokio-tfo = { git = "https://github.com/ZentriaMC/tokio-tfo.git", rev = "5e2760d61478ad452b780b024391332f3587cfe2" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
splice = ["dep:tokio-splice2", "tokio-tfo/tokio-splice2"]

[target.'cfg(target_os = "linux")'.dependencies]
tokio-splice2 = { version = "0.3.2", optional = true }
